# metatlas2

./: .gitignore  Dockerfile  README.md  noxfile.py  pyproject.toml
configs/: analysis.yaml  create_atlas_config.yaml  create_atlases.yaml  create_compounds.yaml  metatlas2_config.json  metatlas2_config.yaml  system_test_analysis.yaml
data/: LCMS_Runs.json
docs/: add_atlases_to_db.md  add_compounds_to_db.md  codebase_overview.md  database_schema.md  development_and_testing.md  initial_setup.md  manual_curation_and_summary.md  parquet_file_structure.md  run_targeted_analysis.md  standalone_dev_environment.md
local/: docker-compose.standalone.yml  local_workflow.ipynb  parquet_query.ipynb  prepare_dev_package.sh  prepare_local_data_package.sh  standalone_dev_workflow.ipynb
metatlas2/: WORKFLOW_ORGANIZATION.md  add_atlases_to_db.py  add_compounds_to_db.py  analysis_gui.py  analysis_gui_classes.py  analysis_gui_dash.py  analysis_summary.py  checkpoint_manager.py  convert_raw_files.py  create_curation_container.py  data_classes.py  database_interact.py  extract_data_from_h5.py  extract_data_from_h5_legacy.py  extract_data_from_parquet.py  feature_tools.py  file_and_project_format.py  gdrive_upload.py  get_atlases_from_db.py  lcmsruns_tools.py  load_tools.py  logging_config.py  manual_curation_summarizer.py  ms1_ms2_analysis.py  ms1_ms2_summarizer.py  ms2_hit_detection.py  note_options.py  notebook_generator.py  pubchem_retrieval.py  rclone.py  rt_align_tools.py  run_targeted_analysis.py  run_workflows.py  simple_cache.py  spectrum_handlers.py  targeted_analysis.py  targeted_gui.py  utils.py  workflow_objects.py  workflows.py
metatlas2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
notebooks/: Add_To_Compounds_Database.ipynb  Atlas_From_Table.ipynb  Create_Atlas.ipynb  Create_Metatlas_Database.ipynb  RT_Alignment.ipynb  Targeted_Analysis.ipynb  Targeted_Analysis_temp.ipynb  Test_Analysis.ipynb  add_new_atlases_to_db.ipynb  add_new_compounds_to_db.ipynb  add_new_compounds_to_metatlas_db.ipynb  create_new_atlas_from_file.ipynb  manual_curation_of_targeted_results.ipynb  project_setup.ipynb  run_analysis_gui.ipynb  run_analysis_gui_dash.ipynb  run_analysis_summary.ipynb  run_auto_identification.ipynb  run_project_setup.ipynb  run_rt_alignment.ipynb  run_targeted_analysis.ipynb  run_targeted_workflow.ipynb  standalone_dev_workflow.ipynb  workflow_example.ipynb  (+1 more)
(+103 files in other folders)
