[project]
name = "metatlas2"
version = "0.1.0"
description = "Metatlas targeted lite version venv"
requires-python = ">=3.11.8"
dependencies = [
    "duckdb==1.4.4",
    "ipyparallel==9.0.2",
    "ipywidgets==8.1.5",
    "jupyter-ai==2.31.7",
    "jupyter-ai-magics==2.31.7",
    "jupyter-bokeh>=4.0.5",
    "matchms==0.31.0",
    "matplotlib==3.10.8",
    "numpy==2.2.6",
    "pandas==2.3.3",
    "panel>=1.8.7",
    "param>=2.3.2",
    "pillow==12.1.1",
    "plotly==5.24.1",
    "pubchempy==1.0.5",
    "pyarrow==18.1.0",
    "pycares==5.0.1",
    "pycurl==7.45.6",
    "pyczmq==0.0.4",
    "pymzml==2.6.0",
    "pyopengl==3.1.10",
    "pyparsing==3.3.2",
    "pytest==8.3.4",
    "regex==2024.11.6",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "serialize==0.2.1",
    "setuptools==72.1.0",
    "sqlalchemy==2.0.39",
    "tables==3.10.2",
    "tqdm==4.67.1",
]

[tool.uv.extra-build-dependencies]
jnius = ["Cython"]
